deploy: e0a901e491a7d86f17d2fb3878a82c2373abb788

--- a/next/src/serenity/model/user.rs.html
+++ b/next/src/serenity/model/user.rs.html
@@ -1628,7 +1628,7 @@
     <span class="doccomment">/// #     let mut user = CurrentUser::default();</span>
     <span class="doccomment">/// let avatar = serenity::utils::read_image(&quot;./avatar.png&quot;)?;</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// user.edit(&amp;http, |p| p.avatar(Some(&amp;avatar))).await;</span>
+    <span class="doccomment">/// user.edit(&amp;http, |p| p.avatar(Some(avatar))).await;</span>
     <span class="doccomment">/// #     Ok(())</span>
     <span class="doccomment">/// # }</span>
     <span class="doccomment">/// ```</span>
