deploy: 294d40a5f8c454e3a907237228ac25c6289b12fd

--- a/current/src/serenity/model/webhook.rs.html
+++ b/current/src/serenity/model/webhook.rs.html
@@ -863,7 +863,7 @@
 
     <span class="doccomment">/// Edits a webhook&#39;s avatar.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// Refer to [`Http::edit_webhook`] for restrictions on wehbhook avatars.</span>
+    <span class="doccomment">/// Refer to [`Http::edit_webhook`] for restrictions on webhook avatars.</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// Does not require authentication, as it calls [`Http::edit_webhook_with_token`] internally.</span>
     <span class="doccomment">/// # Examples</span>
