deploy: 10aab4a92c806890c9a7fb5251d660add6b3b398

--- a/next/src/serenity/builder/create_embed.rs.html
+++ b/next/src/serenity/builder/create_embed.rs.html
@@ -861,10 +861,10 @@
     <span class="doccomment">///                 let _ = channel</span>
     <span class="doccomment">///                     .send_message(&amp;context, |m| {</span>
     <span class="doccomment">///                         m.embed(|e| {</span>
-    <span class="doccomment">///                             if let Some(ref joined_at) = member.joined_at {</span>
+    <span class="doccomment">///                             if let Some(joined_at) = member.joined_at {</span>
     <span class="doccomment">///                                 e.timestamp(joined_at);</span>
     <span class="doccomment">///                             }</span>
-    <span class="doccomment">///                             e.author(|a| a.icon_url(&amp;user.face()).name(&amp;user.name))</span>
+    <span class="doccomment">///                             e.author(|a| a.icon_url(user.face()).name(&amp;user.name))</span>
     <span class="doccomment">///                                 .title(&quot;Member Join&quot;)</span>
     <span class="doccomment">///                         })</span>
     <span class="doccomment">///                     })</span>
