deploy: 1f265cc476d628cfd6d372b7d46bbd19f31d5f7d

--- a/next/src/serenity/client/bridge/gateway/shard_messenger.rs.html
+++ b/next/src/serenity/client/bridge/gateway/shard_messenger.rs.html
@@ -387,7 +387,7 @@
     <span class="doccomment">/// #         id: 0,</span>
     <span class="doccomment">/// #         total: 1,</span>
     <span class="doccomment">/// #     };</span>
-    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all()).await?;</span>
+    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all(), None).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// use serenity::model::id::GuildId;</span>
     <span class="doccomment">///</span>
@@ -414,7 +414,7 @@
     <span class="doccomment">/// #         total: 1,</span>
     <span class="doccomment">/// #     };</span>
     <span class="doccomment">/// #</span>
-    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all()).await?;;</span>
+    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all(), None).await?;;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// use serenity::model::id::GuildId;</span>
     <span class="doccomment">///</span>
@@ -464,7 +464,7 @@
     <span class="doccomment">/// #         total: 1,</span>
     <span class="doccomment">/// #     };</span>
     <span class="doccomment">/// #</span>
-    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all()).await?;</span>
+    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all(), None).await?;</span>
     <span class="doccomment">/// use serenity::gateway::ActivityData;</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// shard.set_activity(Some(ActivityData::playing(&quot;Heroes of the Storm&quot;)));</span>
@@ -540,7 +540,7 @@
     <span class="doccomment">/// #         total: 1,</span>
     <span class="doccomment">/// #     };</span>
     <span class="doccomment">/// #</span>
-    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all()).await?;</span>
+    <span class="doccomment">/// #     let mut shard = Shard::new(mutex.clone(), &quot;&quot;, shard_info, GatewayIntents::all(), None).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// use serenity::model::user::OnlineStatus;</span>
     <span class="doccomment">///</span>
